--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ng-bootstrap/ng-bootstrap": "2.0.0",
     "bootstrap": "4.1.1",
     "core-js": "2.5.5",
+    "hoek": "^5.0.3",
     "jquery": "3.3.1",
     "popper.js": "1.14.3",
     "rxjs": "6.1.0",
